--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "joi": "^17.9.2",
     "nanoid": "^3.3.6"
   }
 }
